// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/LONG.proto";
import "../ccsds_mal/NamedValue.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/URI.proto";
import "./CollectionDocument.proto";
import "./CollectionVirtualFolder.proto";
import "./UserRight.proto";


package file.protobuf;

message Collection {
extensions 13 to 113;

  optional ccsds_mal.protobuf.STRING collectionName = 1;
  optional ccsds_mal.protobuf.URI collectionDirname = 2;
  optional ccsds_mal.protobuf.STRING virtualName = 3;
  optional ccsds_mal.protobuf.BOOLEAN isVirtualFolder = 4;
  optional ccsds_mal.protobuf.LONG collectionRefForVf = 5;
  repeated file.protobuf.CollectionDocument documents = 6;
  repeated file.protobuf.CollectionVirtualFolder virtualFolders = 7;
  optional file.protobuf.UserRight usersAccess = 8;
  optional ccsds_mal.protobuf.STRING lockedBy = 9;
  repeated ccsds_mal.protobuf.NamedValue properties = 10;
  optional ccsds_mal.protobuf.STRING creatorUser = 11;
  optional ccsds_mal.protobuf.BOOLEAN accessRightsPropagation = 12;
}
